--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "element-ui": "^2.15.5",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "fs": "0.0.1-security",
+    "http": "0.0.1-security",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "util": "^0.12.4",
+    "vue-template-compiler": "^2.6.11",
+    "zlib": "^1.0.5"
   }
 }
